增加简单的登录页面和登陆验证

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,9 @@
-<p>home</p>
+<div align="center">
+	<h2>通讯录登陆界面</h2>
+	<form action="login" method="post">
+	用户名：<input type="text" id="username" name="username" value="admin" /><br />
+	密  码：<input type="password" id="password" name="password" value="123456" /><br />
+	<br />
+	<input type="submit" value="登陆" />
+	</form>
+</div>
